tests/build/fail/impl_ui_node/missing_delegate_expr.stderr
error: expected `delegate: <expr>`
 --> $DIR/missing_delegate_expr.rs:6:16
  |
6 | #[impl_ui_node(delegate)]
  |                ^^^^^^^^

error: expected `delegate_mut: <expr>`
  --> $DIR/missing_delegate_expr.rs:12:39
   |
12 | #[impl_ui_node(delegate: &self.inner, delegate_mut)]
   |                                       ^^^^^^^^^^^^

error: expected `delegate: <expr>`
  --> $DIR/missing_delegate_expr.rs:18:24
   |
18 | #[impl_ui_node(delegate:)]
   |                        ^

warning: unused import: `UiNode`
 --> $DIR/missing_delegate_expr.rs:1:35
  |
1 | use zero_ui::core::{impl_ui_node, UiNode};
  |                                   ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
